// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Logo should render as big version 1`] = `
.c0 {
  width: 225px;
  margin: 15px 0 25px;
}

.c1 {
  max-width: 300px;
}

@media only screen and (min-width:768px) {
  .c0 {
    width: 270px;
  }
}

@media only screen and (min-width:992px) {
  .c0 {
    width: 300px;
    margin: 0 0 30px;
  }
}

<h1
  class="c0"
  data-testid="logo"
>
  <img
    alt="FooDublin Logo"
    class="c1"
    src="/public/images/logo.svg"
  />
</h1>
`;

exports[`Component: Logo should render as small version 1`] = `
.c0 {
  width: 190px;
}

.c1 {
  max-width: 300px;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c0 {
    width: 200px;
  }
}

<h1
  class="c0"
  data-testid="logo"
>
  <img
    alt="FooDublin Logo"
    class="c1"
    src="/public/images/logo.svg"
  />
</h1>
`;
